--- a/gl-spline/gl-spline.vcxproj
+++ b/gl-spline/gl-spline.vcxproj
@@ -169,7 +169,6 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
-    <ClInclude Include="Shader_impl.h" />
     <ClInclude Include="ShadowMap.h" />
     <ClInclude Include="SpotLight.h" />
     <ClInclude Include="Texture.h" />
@@ -204,6 +203,8 @@
     <None Include="shaders\shadow.vert" />
     <None Include="shaders\shadow_depth.frag" />
     <None Include="shaders\shadow_depth.vert" />
+    <None Include="shaders\spline.frag" />
+    <None Include="shaders\spline.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
